<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_900"
    android:theme="@style/ThemeOverlay.Locals.Explore"
    tools:context=".presentation.group.GroupFragment">

    <View
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue_900"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        app:layout_constraintTop_toBottomOf="@id/headerView" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/group_go_back_to_my_groups_content_desc"
        android:padding="10dp"
        android:src="@drawable/ic_back_arrow_simple"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/infoButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/group_more_information_about_current_group_content_desc"
        android:padding="8dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/nameOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="?textAppearanceB1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/infoButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        tools:text="Chór ACPO" />

    <TextView
        android:id="@+id/noMessagesInfoLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/background_chat_message_empty"
        android:padding="6dp"
        android:text="@string/group_there_is_no_messages_yet_say_hello"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceB2"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="12dp"
        android:paddingStart="8dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.0"
        app:stackFromEnd="true"
        tools:layout_editor_absoluteX="0dp" />

    <FrameLayout
        android:id="@+id/sendButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_chat_message_input"
        android:backgroundTint="@color/blue_950"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_send"
            android:backgroundTint="@color/white"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_chat_message_input"
        android:backgroundTint="@color/blue_950"
        android:hint="@string/group_type_a_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="?textAppearanceCaption"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_300"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>